reorg nav bar, reorder patient mods

--- a/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
+++ b/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
@@ -1,4 +1,4 @@
-<h4 class="patient" id="demographics">demographics</h4>
+<h4 class="patient">demographics</h4>
 
 <div class="species" *ngIf="patient.species">
   <span class="variable-label">species: </span>
