--- a/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
+++ b/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
@@ -1,1 +1,1 @@
-<app-patient-timepoints id="samples" [alternateIDs]="patient.alternateIdentifier" showMissing='true'></app-patient-timepoints>
+<app-patient-timepoints [alternateIDs]="patient.alternateIdentifier" showMissing='true'></app-patient-timepoints>
