--- a/sample-viewer/src/app/patient-page/patient-nav/patient-nav.component.html
+++ b/sample-viewer/src/app/patient-page/patient-nav/patient-nav.component.html
@@ -11,10 +11,10 @@
 </ng-template>
 
 <ng-template #link_obj let-link="link">
-  <a class="link" [routerLink]="['../', patientID]" [fragment]="link.key  | stripWhitespace" (click)="onAnchorClick(link.key)">{{link.key}}</a>
+  <a class="link" [routerLink]="['../', patientID]" [fragment]="link.key  | stripWhitespace" (click)="onAnchorClick2(link.key)">{{link.key}}</a>
   <ul class="level1">
     <li *ngFor = "let sublink of link.values" class="link">
-      <a [routerLink]="['../', patientID]" [fragment]="sublink | stripWhitespace" (click)="onAnchorClick(sublink)">{{ sublink | titlecase }}</a>
+      <a [routerLink]="['../', patientID]" [fragment]="sublink | stripWhitespace" (click)="onAnchorClick2(sublink)">{{ sublink }}</a>
     </li>
   </ul>
 </ng-template>
