--- a/sample-viewer/src/app/patient-page/patient-nav/patient-nav.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-nav/patient-nav.component.scss
@@ -19,10 +19,6 @@
     text-align: right;
   }
 
-  .link:hover {
-    font-weight: bold;
-  }
-
   .level0 > li {
     text-transform: uppercase;
     font-size: 1.25em;
@@ -42,6 +38,10 @@
   a {
     color: $ebola-color;
     text-decoration: none;
+
+    &:hover {
+      color: $ebola-dk;
+    }
   }
 
   ul > li > ul > li a {
@@ -57,6 +57,10 @@
   a {
     color: $lassa-color;
     text-decoration: none;
+
+    &:hover {
+      color: $lassa-dk;
+    }
   }
 
   ul > li > ul > li a {
@@ -68,10 +72,15 @@
   }
 }
 
-.Control, .Unknown {
+.Control,
+.Unknown {
   a {
     color: $grey-600;
     text-decoration: none;
+
+    &:hover {
+      color: $default-color;
+    }
   }
 
   ul > li > ul > li a {
