--- a/sample-viewer/src/app/hla/hla-comparison/small-multiple-comparison/small-multiple-comparison.component.html
+++ b/sample-viewer/src/app/hla/hla-comparison/small-multiple-comparison/small-multiple-comparison.component.html
@@ -1,3 +1,7 @@
+<div class="spinner-container container" *ngIf="loading">
+  <mat-spinner></mat-spinner>
+</div>
+
 <div class="container small-multiple-container" *ngIf="right && left && right.length > 0 && left.length > 0">
   <ng-container *ngFor="let locus of loci; let idx = index">
     <div class="small-multiple">
