add dataset sources

--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -25,6 +25,8 @@
         </div>
       </div>
 
+      <app-dataset-source [sources]="dataset.source"></app-dataset-source>
+
 
       <div id="files">
         <h3>Download files and view metadata</h3>
