fix ngSwitch, add publisher mockup

--- a/sample-viewer/src/app/format-publisher/format-publisher.component.html
+++ b/sample-viewer/src/app/format-publisher/format-publisher.component.html
@@ -1,3 +1,8 @@
-<p>
-  format-publisher works!
-</p>
+<ng-container *ngIf="publisher">
+  <div class="unpublished-label">
+    Unpublished data from
+  </div>
+  <div>
+    <a [href]="publisher.url" rel="noreferrer" target="_blank">{{publisher.name}}</a>
+  </div>
+</ng-container>
