--- a/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
@@ -12,7 +12,7 @@
       {{ source.percent | percent : 0 }}
     </div>
 
-    <ng-container [ngSwitch]="source">
+    <ng-container [ngSwitch]="source.source">
       <app-format-citation [citations]="[source]" class="citation-group" *ngSwitchCase="'citation'"></app-format-citation>
       <app-format-publisher></app-format-publisher>
       <app-format-publisher [publisher]="source" class="publisher-group" *ngSwitchCase="'publisher'"></app-format-publisher>
