--- a/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="sources">
-  <h2>Dataset sources</h2>
+  <h3>Dataset sources</h3>
 
   <div class="helper-text">
     <!-- <i class="fas fa-arrow-down"></i>  -->
@@ -13,10 +13,10 @@
     </div>
 
     <ng-container [ngSwitch]="source.source">
-      <app-format-citation [citations]="[source]" class="citation-group" *ngSwitchCase="'citation'"></app-format-citation>
+      <app-format-citation [citations]="[source.source]" class="citation-group" *ngSwitchCase="'citation'"></app-format-citation>
       <app-format-publisher></app-format-publisher>
-      <app-format-publisher [publisher]="source" class="publisher-group" *ngSwitchCase="'publisher'"></app-format-publisher>
-      <app-format-publisher [publisher]="source" class="unknown-group" *ngSwithDefault></app-format-publisher>
+      <app-format-publisher [publisher]="source.source" class="publisher-group" *ngSwitchCase="'publisher'"></app-format-publisher>
+      <app-format-publisher [publisher]="source.source" class="unknown-group" *ngSwithDefault></app-format-publisher>
     </ng-container>
   </div>
 </ng-container>
