--- a/sample-viewer/src/app/format-publisher/format-publisher.component.html
+++ b/sample-viewer/src/app/format-publisher/format-publisher.component.html
@@ -1,8 +1,5 @@
 <ng-container *ngIf="publisher">
-  <div class="unpublished-label">
-    Unpublished data from
-  </div>
   <div>
-    <a [href]="publisher.url" rel="noreferrer" target="_blank">{{publisher.name}}</a>
+    <a [href]="publisher.url" rel="noreferrer" target="_blank">{{publisher.name}}</a><span class="unpublished-label"> (unpublished)</span>
   </div>
 </ng-container>
