update css, nav bar

--- a/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.scss
+++ b/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.scss
@@ -40,6 +40,7 @@ $square-width: 2em;
 
 // mat-expansion-panel
 .panel-group {
+  margin-top: 10px !important;
   margin-bottom: 10px !important;
 }
 
