--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -290,6 +290,20 @@ svg-icon.country-icon {
   }
 }
 
+.verified-icon {
+  fill: url(#cvisb_gradient) $cvisb-dark;
+}
+
+svg-icon {
+  width: 18px;
+  margin-right: 10pc;
+}
+
+.preliminary-icon {
+  fill: url(#cvisb_gradient) $cvisb-theme;
+  // stroke-width: 10;
+}
+
 .hla-icon,
 .hla-icon {
   stroke: $default-color;
