--- a/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-source/dataset-source.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div [ngSwitch]="source.type" class="source">
-      <app-format-citation [citations]="[source]" class="citation-group" *ngSwitchCase="'citation'"></app-format-citation>
+      <app-format-citation [citations]="[source]" class="citation-group" *ngSwitchCase="'citation'" verbosity="basic"></app-format-citation>
       <app-format-publisher [publisher]="source" class="publisher-group" *ngSwitchCase="'publisher'"></app-format-publisher>
       <app-format-publisher [publisher]="source" class="unknown-group" *ngSwitchCase="'unknown'"></app-format-publisher>
       <app-format-publisher [publisher]="source" class="unknown-group" *ngSwithDefault></app-format-publisher>
