add verified tag

--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -300,6 +300,10 @@ svg-icon.country-icon {
   // stroke-width: 10;
 }
 
+.data-status-icon {
+  width: 18px;
+}
+
 .hla-icon,
 .hla-icon {
   stroke: $default-color;
