add prelim icons

--- a/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.scss
+++ b/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.scss
@@ -11,6 +11,10 @@
 }
 
 .container-icons i {
-  margin: 0 5px !important;
+  margin: 0 10px 0 0 !important;
   font-size: 1em !important;
+}
+
+.container-icons {
+    align-items: center;
 }
