--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
@@ -1,7 +1,7 @@
 <div class="hla-container patient-data-container">
   <ng-container *ngIf="genotype && alleleCount && alleleCount.length > 1; else nodata">
 
-    <app-provenance [dateModified]="dateModified" embargoLabel="HLA" [embargoed]="true" [source]="publishers" class="provenance"></app-provenance>
+    <app-provenance [dateModified]="dateModified" embargoLabel="HLA" [embargoed]="true" [source]="publishers" dataStatus="verified" class="provenance"></app-provenance>
     <div class="hla-genotype">
 
       <div class="hla-data" *ngIf="alleleCount && alleleCount.length > 0">
