--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -85,11 +85,11 @@
         <mat-expansion-panel class="panel-group" id="ELISA" [expanded]="elisaPanelState" (opened)="elisaPanelState = true" (closed)="elisaPanelState = false">
           <mat-expansion-panel-header [collapsedHeight]="dataPanelHeight" [expandedHeight]="dataPanelHeight">
             <mat-panel-title class="panel-title">
-              <app-provenance-title class="flex-grow1" title="ELISA Data" icon="elisa"></app-provenance-title>
+              <app-provenance-title class="flex-grow1" title="ELISA Data" icon="elisa" dataStatus="preliminary"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <app-provenance [dateModified]="patient.dateModified" class="provenance"></app-provenance>
+          <app-provenance [dateModified]="patient.dateModified" class="provenance" dataStatus="preliminary"></app-provenance>
           <app-patient-elisas [patient]="patient"></app-patient-elisas>
         </mat-expansion-panel>
 
