--- a/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
+++ b/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
@@ -10,6 +10,11 @@
   <div class="container container-icons">
     <i class="fas fa-lock private-icon header-icon" matTooltip="private data; do not share" *ngIf="private"></i>
     <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share" *ngIf="embargoed"></i>
-    <svg-icon [icon]="dataStatus" class="data-status-icon" [matTooltip]="dataStatus + ' data'" *ngIf="dataStatus"></svg-icon>
+    <!-- <svg-icon [icon]="dataStatus" class="data-status-icon" [matTooltip]="dataStatus + ' data'" *ngIf="dataStatus"></svg-icon> -->
+    <div class="data-status" *ngIf="dataStatus === 'preliminary'">
+      <div class="preliminary">preliminary data</div>
+      <svg-icon [icon]="dataStatus" class="data-status-icon" [matTooltip]="dataStatus + ' data'" *ngIf="dataStatus"></svg-icon>
+    </div>
+
   </div>
 </div>
