--- a/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.scss
+++ b/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.scss
@@ -1,3 +1,5 @@
+@import '../../../sass/variables.scss';
+
 .provenance-title {
   display: flex;
   flex-wrap: wrap;
@@ -16,5 +18,10 @@
 }
 
 .container-icons {
-    align-items: center;
+  align-items: center;
+}
+
+.preliminary {
+  margin-right: 3px;
+  color: $cvisb-theme;
 }
