--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="patientID" *ngIf="patient">
+final<div class="container" id="patientID" *ngIf="patient">
   <div class="patient-container">
 
     <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort"></app-patient-nav>
@@ -97,7 +97,7 @@
         <mat-expansion-panel class="panel-group" id="HLA-sequencing" [expanded]="hlaPanelState" (opened)="hlaPanelState = true" (closed)="hlaPanelState = false">
           <mat-expansion-panel-header [collapsedHeight]="dataPanelHeight" [expandedHeight]="dataPanelHeight">
             <mat-panel-title class="panel-title">
-              <app-provenance-title class="flex-grow1" title="HLA Sequencing" icon="hla" [embargoed]="true" dataStatus="verified"></app-provenance-title>
+              <app-provenance-title class="flex-grow1" title="HLA Sequencing" icon="hla" [embargoed]="true" dataStatus="final"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
           <app-patient-hla [patient]="patient" [files]="HLAFiles"></app-patient-hla>
@@ -107,7 +107,7 @@
         <mat-expansion-panel class="panel-group" id="Viral-Sequencing" [expanded]="viralSeqPanelState" (opened)="viralSeqPanelState = true" (closed)="viralSeqPanelState = false">
           <mat-expansion-panel-header [collapsedHeight]="dataPanelHeight" [expandedHeight]="dataPanelHeight">
             <mat-panel-title class="panel-title">
-              <app-provenance-title class="flex-grow1" title="Viral Sequencing" icon="viralseq" dataStatus="verified"></app-provenance-title>
+              <app-provenance-title class="flex-grow1" title="Viral Sequencing" icon="viralseq" dataStatus="final"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
           <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles" [patientID]="patient.patientID"></app-patient-viral-seq>
