--- a/sample-viewer/src/app/admin/unauthorized/unauthorized.component.html
+++ b/sample-viewer/src/app/admin/unauthorized/unauthorized.component.html
@@ -4,6 +4,6 @@
     To view {{page === "/" ? "this section" : page }}, you must be a member of the Center for Viral and Systems Biology consortium and be logged in.
   </p>
   <p>
-    If you are a CViSB member, contact Kristian or Laura to request access.
+    If you are a CViSB or VHFC member and would like access, please contact <a href="mailto:info@cvisb.org?subject=CViSB data access">info@cvisb.org</a>.
   </p>
 </section>
