--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.scss
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.scss
@@ -20,7 +20,7 @@ svg-icon {
   flex-wrap: wrap;
 }
 
-.expt-type {
+.filter-expt {
   display: inline-block;
   // margin-right: 3em;
   margin-right: 1.5em;
