--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -105,7 +105,7 @@
     <ng-container matColumnDef="availableData">
       <th mat-header-cell *matHeaderCellDef>available data</th>
       <td mat-cell *matCellDef="let element">
-        <div class="expt-type mat-shadow" *ngFor="let expt of element.availableData" [matTooltip]="expt" matTooltipPosition="above" [ngClass]="(expt | experimentObject)['identifier']">
+        <div class="expt-type expt-type-hover" *ngFor="let expt of element.availableData" [matTooltip]="expt" matTooltipPosition="above" [ngClass]="(expt | experimentObject)['identifier']">
           <a [routerLink]="['/patient', element.patientID]" [fragment]="(expt | experimentObject)['name'] | stripWhitespace">
             <svg-icon [icon]="(expt | experimentObject)['identifier']" [ngClass]="(expt | experimentObject)['identifier'] + '-icon'"></svg-icon>
           </a>
