--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -577,6 +577,7 @@ button.stepper-button {
 
 .expt-type {
   display: inline-block;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   margin: 0.5em 1.5em 0.5em 0;
   padding: 5px 8px 5px 5px;
   border-radius: 5px;
@@ -586,10 +587,10 @@ button.stepper-button {
     width: 35px;
     vertical-align: middle;
   }
+}
 
-  &:hover {
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0), 0 2px 2px 0 rgba(0, 0, 0, .5), 0 1px 5px 0 rgba(0, 0, 0, 0.3);
-  }
+.expt-type-hover:hover {
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0), 0 2px 2px 0 rgba(0, 0, 0, .5), 0 1px 5px 0 rgba(0, 0, 0, 0.3);
 }
 
 .hla {
@@ -599,7 +600,7 @@ button.stepper-button {
 }
 
 .tcr {
-  background: mix(accent(50), accent(100), 75%);
+  background: mix(accent(50), accent(100), 80%);
 }
 
 .bcr {
