--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -579,7 +579,7 @@ button.stepper-button {
   display: inline-block;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   margin: 0.5em 1.5em 0.5em 0;
-  padding: 5px 8px 5px 5px;
+  padding: 5px;
   border-radius: 5px;
 
   & svg-icon {
