--- a/sample-viewer/src/app/file-list/file-list.component.html
+++ b/sample-viewer/src/app/file-list/file-list.component.html
@@ -45,6 +45,14 @@
       </td>
     </ng-container>
 
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let element">
+        {{element.description}}
+      </td>
+    </ng-container>
+
     <!-- Metadata Column -->
     <!-- <ng-container matColumnDef="metadata">
       <th mat-header-cell *matHeaderCellDef>File properties</th>
