update css, add curated data type, custom sort

--- a/sample-viewer/src/app/file-list/file-list.component.scss
+++ b/sample-viewer/src/app/file-list/file-list.component.scss
@@ -50,3 +50,7 @@ a:hover {
 .mat-table, .mat-paginator {
   background: inherit !important;
 }
+
+.mat-column-description {
+    max-width: 250px;
+}
