--- a/sample-viewer/src/app/file-list/file-list.component.html
+++ b/sample-viewer/src/app/file-list/file-list.component.html
@@ -5,8 +5,7 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <table mat-table [dataSource]="dataSource" class="data-download" matSort [id]="datasetID | stripWhitespace">
-  <!-- <table mat-table [dataSource]="dataSource" class="data-download" matSort matSortActive="additionalType" matSortDirection="asc" [id]="datasetID | stripWhitespace"> -->
+  <table mat-table [dataSource]="dataSource" class="data-download" matSort matSortActive="additionalType" matSortDirection="asc" [id]="datasetID | stripWhitespace">
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
