fix ngIf conditions

--- a/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
+++ b/sample-viewer/src/app/dataset/dataset-summary/dataset-summary.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container dataset-summary">
+<div class="grid-container dataset-summary" *ngIf="dataset">
   <div class="grid-item grid-column-container">
     <div class="container count-pair">
       <div class="count-value">
