--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <app-dataset-summary></app-dataset-summary>
+        <app-dataset-summary [dataset]="dataset"></app-dataset-summary>
       </div>
     </div>
 
